--- a/css/sport.css
+++ b/css/sport.css
@@ -6,7 +6,7 @@ body {
   color: #333;
 
   /* 背景に海の画像を設定 */
-  background-image: url("../img/image.jpg");
+  background-image: url("../img/24241604_m.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -120,5 +120,3 @@ hr {
     gap: 10px;
   }
 }
-
-
