--- a/css/diving.css
+++ b/css/diving.css
@@ -1,1 +1,23 @@
-@charset "UTF-8";
+/* 全体設定 */
+body {
+  margin: 0;
+  font-family: "Kaisei Decol", sans-serif;
+  line-height: 1.8;
+  color: #333;
+
+  /* 背景に海の画像を設定 */
+  background-image: url("../img/24241604_m.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+header > li {
+  list-style: none;
+}
+
+header > li a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
