--- a/css/diving.css
+++ b/css/diving.css
@@ -6,7 +6,7 @@ body {
   color: #333;
 
   /* 背景に海の画像を設定 */
-  background-image: url("../img/24241604_m.jpg");
+  background-image: url("../img/_m.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
